deploy/admin.yml
apiVersion: v1
kind: Service
metadata:
  name: admin
spec:
  ports:
  - name: http
    port: 80
    targetPort: 5000
  selector:
    app: admin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin
spec:
  selector:
    matchLabels:
      app: admin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
      - image: docker.shlyahdomrii.tech/back:latest
        name: admin
        resources:
          limits:
            memory: 128Mi
            cpu: 100m
          requests:
            memory: 16Mi
            cpu: 100m
        ports:
        - name: http
          containerPort: 5000
      imagePullSecrets:
        - name: regcred
