deploy/front.yml
apiVersion: v1
kind: Service
metadata:
  name: front
spec:
  ports:
  - name: http
    port: 80
    targetPort: 8080
  selector:
    app: front
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
spec:
  selector:
    matchLabels:
      app: front
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - image: docker.shlyahdomrii.tech/front:latest
        name: front
        resources:
          limits:
            memory: 128Mi
            cpu: 100m
          requests:
            memory: 128Mi
            cpu: 100m
        ports:
        - name: http
          containerPort: 8080
      imagePullSecrets:
        - name: regcred
