deploy/gotrue.yml
apiVersion: v1
kind: Service
metadata:
  name: gotrue
spec:
  ports:
  - name: http
    port: 80
  selector:
    app: gotrue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gotrue
spec:
  selector:
    matchLabels:
      app: gotrue
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: gotrue
    spec:
      containers:
      - image: docker.shlyahdomrii.tech/gotrue
        name: gotrue
        resources:
          limits:
            memory: 128Mi
            cpu: 100m
          requests:
            memory: 16Mi
            cpu: 100m
        ports:
        - name: http
          containerPort: 80
      imagePullSecrets:
        - name: regcred
