deploy/smtp.yml
apiVersion: v1
kind: Service
metadata:
  name: smtp
spec:
  ports:
  - name: smtp
    port: 587
  selector:
    app: smtp
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smtp
spec:
  selector:
    matchLabels:
      app: smtp
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: smtp
    spec:
      containers:
      - image: boky/postfix
        name: smtp
        resources:
          limits:
            memory: 128Mi
            cpu: 100m
          requests:
            memory: 16Mi
            cpu: 100m
        ports:
        - name: smtp
          containerPort: 587
