deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /api/chief(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: chief
            port:
              number: 80
      - path: /.netlify/identity(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: gotrue
            port:
              number: 8080
      - path: /api/payment(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: payment
            port:
              number: 80
      - path: /()(admin/?.*)
        pathType: Prefix
        backend:
          service:
            name: admin
            port:
              number: 80
      - path: /(|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: front
            port:
              number: 8080
